--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -5,6 +5,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Lesy</title>
+   <link rel="stylesheet" href="style.css">
+   <style></style>
 </head>
 
 <body>
@@ -159,14 +161,17 @@
          </section>
          <section>
             <table border="1">
-               <tr>
-                  <th>Рік</th>
-                  <th>Назва</th>
-                  <th>Режисер</th>
-                  <th>Театр</th>
-                  <th>Актори</th>
-                  <th>Примітки</th>
-               </tr>
+               <thead>
+                  <tr>
+                     <th>Рік</th>
+                     <th>Назва</th>
+                     <th>Режисер</th>
+                     <th>Театр</th>
+                     <th>Актори</th>
+                     <th>Примітки</th>
+                  </tr>
+               </thead>
+               <tbody>
                <tr>
                   <td>1914</td>
                   <td>«Лісова пісня»</td>
@@ -209,6 +214,10 @@
                         театр ім. Івана Франка</a></td>
                   <td></td>
                </tr>
+            </tbody>
+            <tfoot>
+
+            </tfoot>
             </table>
             <br>
             <br>
@@ -216,49 +225,58 @@
          </section>
          <section>
             <table border="1">
-               <tr>
-                  <th colspan="2">Творчість Лесі Українки</th>
-               </tr>
-               <tr>
-                  <th>Поезія</th>
-                  <td><b>Збірки:</b> На крилах пісень (1892) · Думи і мрії (1899) · Відгуки (1902) <br>
-                     <b>Поеми:</b> Русалка (1887) · Самсон (1892) · Місячна легенда · Роберт Брюс, король шотландський
-                     (1894)
-                     ·
-                     Давня
-                     казка (1896) · Одно слово · Віла-посестра · Якутська поема · Ізольда Білорука · Що дасть нам силу?
-                     ·
-                     Орфеєве
-                     чудо · Про велета
-                  </td>
-               </tr>
-               <tr>
-                  <th>Драматургія</th>
-                  <td>Блакитна троянда (1896) · Прощання (1896) · Одержима (1901) · Вавилонський полон · На руїнах
-                     (1904) ·
-                     Осіння казка (1905) · Три хвилини · В катакомбах (1905) · В дому роботи, в країні неволі ·
-                     Кассандра
-                     (1906)
-                     · Айша та Мохаммед · У пущі · На полі крові · Йоганна, жінка Хусова · Руфін і Прісцілла (1910) ·
-                     Бояриня
-                     (1910) · <b>Лісова пісня</b> (1911) · Адвокат Мартіан (1911) · Камінний господар (1911) · Орфеєве
-                     чудо
-                     ·
-                     Оргія
-                     (1913)</td>
-               </tr>
-               <tr>
-                  <th>Проза</th>
-                  <td>Така її доля (1888) · Святий вечір! (1888) · Метелик (1890) · Весняні співи · Біда навчить (1891)
-                     ·
-                     Чашка
-                     (кін. 1880-х) · Лелія (1890) · Жаль (1890) · Пізно (1893) · Волинські образки · Школа · Щастя
-                     (1895) ·
-                     Місто
-                     смутку (1896) · Голосні струни · Ein Brief ins Weite · Над морем · Мгновение · Сліпець · Примара ·
-                     Приязнь ·
-                     Розмова · Враги</td>
-               </tr>
+               <thead>
+                  <tr>
+                     <th colspan="2">Творчість Лесі Українки</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  <tr>
+                     <th>Поезія</th>
+                     <td><b>Збірки:</b> На крилах пісень (1892) · Думи і мрії (1899) · Відгуки (1902) <br>
+                        <b>Поеми:</b> Русалка (1887) · Самсон (1892) · Місячна легенда · Роберт Брюс, король
+                        шотландський
+                        (1894)
+                        ·
+                        Давня
+                        казка (1896) · Одно слово · Віла-посестра · Якутська поема · Ізольда Білорука · Що дасть нам
+                        силу?
+                        ·
+                        Орфеєве
+                        чудо · Про велета
+                     </td>
+                  </tr>
+                  <tr>
+                     <th>Драматургія</th>
+                     <td>Блакитна троянда (1896) · Прощання (1896) · Одержима (1901) · Вавилонський полон · На руїнах
+                        (1904) ·
+                        Осіння казка (1905) · Три хвилини · В катакомбах (1905) · В дому роботи, в країні неволі ·
+                        Кассандра
+                        (1906)
+                        · Айша та Мохаммед · У пущі · На полі крові · Йоганна, жінка Хусова · Руфін і Прісцілла (1910) ·
+                        Бояриня
+                        (1910) · <b>Лісова пісня</b> (1911) · Адвокат Мартіан (1911) · Камінний господар (1911) ·
+                        Орфеєве
+                        чудо
+                        ·
+                        Оргія
+                        (1913)</td>
+                  </tr>
+                  <tr>
+                     <th>Проза</th>
+                     <td>Така її доля (1888) · Святий вечір! (1888) · Метелик (1890) · Весняні співи · Біда навчить
+                        (1891)
+                        ·
+                        Чашка
+                        (кін. 1880-х) · Лелія (1890) · Жаль (1890) · Пізно (1893) · Волинські образки · Школа · Щастя
+                        (1895) ·
+                        Місто
+                        смутку (1896) · Голосні струни · Ein Brief ins Weite · Над морем · Мгновение · Сліпець · Примара
+                        ·
+                        Приязнь ·
+                        Розмова · Враги</td>
+                  </tr>
+               </tbody>
             </table>
          </section>
       </main>
