lesson 10 css fonts

--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -15,26 +15,26 @@
          <span>Ви не увійшли до системи</span>
          <nav>
             <ul>
-               <li>Обговорення</li>
-               <li>Внесок</li>
-               <li>Створити обліковий запис</li>
-               <li>Увійти</li>
+               <li><a href="#">Обговорення</a></li>
+               <li><a href="#">Внесок</a></li>
+               <li><a href="#">Створити обліковий запис</a></li>
+               <li><a href="#">Увійти</a></li>
             </ul>
          </nav>
       </div>
       <div>
          <nav>
             <ul>
-               <li>Стаття</li>
-               <li>Обговорення</li>
+               <li><a href="#">Стаття</a></li>
+               <li><a href="#">Обговорення</a></li>
             </ul>
          </nav>
          <nav>
             <ul>
-               <li>Читати</li>
-               <li>Редагувати код</li>
-               <li>Додати тему</li>
-               <li>Переглянути історію</li>
+               <li><a href="#">Читати</a></li>
+               <li><a href="#">Редагувати код</a></li>
+               <li><a href="#">Додати тему</a></li>
+               <li><a href="#">Переглянути історію</a></li>
             </ul>
          </nav>
       </div>
