lesson 11 display, flex

--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -23,13 +23,13 @@
          </nav>
       </div>
       <div>
-         <nav>
+         <nav class="inline_nav" id="nav_1">
             <ul>
                <li><a href="#">Стаття</a></li>
                <li><a href="#">Обговорення</a></li>
             </ul>
          </nav>
-         <nav>
+         <nav class="inline_nav">
             <ul>
                <li><a href="#">Читати</a></li>
                <li><a href="#">Редагувати код</a></li>
