--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -14,27 +14,27 @@
       <div>
          <span>Ви не увійшли до системи</span>
          <nav>
-            <ul>
-               <li><a href="#">Обговорення</a></li>
-               <li><a href="#">Внесок</a></li>
-               <li><a href="#">Створити обліковий запис</a></li>
-               <li><a href="#">Увійти</a></li>
+            <ul class="menu">
+               <li class="inline_li"><a href="#">Обговорення</a></li>
+               <li class="inline_li"><a href="#">Внесок</a></li>
+               <li class="inline_li"><a href="#">Створити обліковий запис</a></li>
+               <li class="inline_li"><a href="#">Увійти</a></li>
             </ul>
          </nav>
       </div>
       <div>
          <nav class="inline_nav" id="nav_1">
-            <ul>
-               <li><a href="#">Стаття</a></li>
-               <li><a href="#">Обговорення</a></li>
+            <ul class="menu">
+               <li class="inline_li"><a href="#">Стаття</a></li>
+               <li class="inline_li"><a href="#">Обговорення</a></li>
             </ul>
          </nav>
          <nav class="inline_nav">
-            <ul>
-               <li><a href="#">Читати</a></li>
-               <li><a href="#">Редагувати код</a></li>
-               <li><a href="#">Додати тему</a></li>
-               <li><a href="#">Переглянути історію</a></li>
+            <ul class="menu">
+               <li class="inline_li"><a href="#">Читати</a></li>
+               <li class="inline_li"><a href="#">Редагувати код</a></li>
+               <li class="inline_li"><a href="#">Додати тему</a></li>
+               <li class="inline_li"><a href="#">Переглянути історію</a></li>
             </ul>
          </nav>
       </div>
