--- a/ukranian/index.html
+++ b/ukranian/index.html
@@ -9,30 +9,30 @@
 
 <body>
     <header>
-        <div>
+        <div id="navs_inline_right">
             <span>Ви не увійшли до системи</span>
             <nav>
-                <ul>
-                    <li><a href="#">Обговорення</a></li>
-                    <li><a href="#">Внесок</a></li>
-                    <li><a href="#">Створити обліковий запис</a></li>
-                    <li><a href="#">Увійти</a></li>
+                <ul class="menu">
+                    <li class="inline_li"><a href="#">Обговорення</a></li>
+                    <li class="inline_li"><a href="#">Внесок</a></li>
+                    <li class="inline_li"><a href="#">Створити обліковий запис</a></li>
+                    <li class="inline_li"><a href="#">Увійти</a></li>
                 </ul>
             </nav>
         </div>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="#">Стаття</a></li>
-                    <li><a href="#">Обговорення</a></li>
+        <div id="navs_inline">
+            <nav id="nav_1">
+                <ul class="menu">
+                    <li class="inline_li"><a href="#">Стаття</a></li>
+                    <li class="inline_li"><a href="#">Обговорення</a></li>
                 </ul>
             </nav>
             <nav>
-                <ul>
-                    <li><a href="#">Читати</a></li>
-                    <li><a href="#">Редагувати код</a></li>
-                    <li><a href="#">Додати тему</a></li>
-                    <li><a href="#">Переглянути історію</a></li>
+                <ul class="menu">
+                    <li class="inline_li"><a href="#">Читати</a></li>
+                    <li class="inline_li"><a href="#">Редагувати код</a></li>
+                    <li class="inline_li"><a href="#">Додати тему</a></li>
+                    <li class="inline_li"><a href="#">Переглянути історію</a></li>
                 </ul>
             </nav>
         </div>
@@ -283,6 +283,8 @@
                 <i>Докладніше: <a
                         href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0_(%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0)">Україна
                         (назва)</a></i>
+            </section>
+            <section id="inline_text_and_img">
                 <article>
                     <p>
                         Слов'янське слово «Україна» вперше згадується в Київському літописному зводі за Іпатіївським
@@ -351,6 +353,8 @@
             <section>
                 <h3>Розташування</h3>
                 <i>Докладніше: Територія України та Крайні точки України</i>
+            </section>
+            <section id="inline_text_and_img">
                 <p>
                     Україна розташована в південно-східній частині Європи[6]. Вона має спільні сухопутні державні
                     кордони з
@@ -376,6 +380,7 @@
                     на
                     893 км, лежить приблизно між 52° 20′ та 44° 23′ північної широти й 22° 5′ і 41° 15′ східної довготи.
                     Крайній північний пункт — село Грем'яч (урочище Петрівське) Чернігівської області.
+
                 <ul>
                     <li>Крайній південний пункт — смт Форос Автономної Республіки Крим.</li>
                     <li>Крайній західний пункт — село Соломоново Закарпатської області.</li>
@@ -387,10 +392,11 @@
                         України,
                         неподалік міста Рахів Закарпатської області.</li>
                 </ul>
-
                 </p>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Vkraina-Cosaques-Okraina_small.png/250px-Vkraina-Cosaques-Okraina_small.png"
                     alt="Італійська карта Вінченцо Марія Коронеллі 1690 року, де обидва береги Наддніпрянщини з Києвом позначені як «VKRAINE ou PAYS DES COSAQVES» («Україна або Країна козаків»); слово «OKRAINA» («Окраїна») вжито стосовно Задоння й Рязані">
+
+
             </section>
             <section>
                 <h3>Судова влада</h3>
