--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -11,8 +11,8 @@
 
 <body>
    <header>
-      <div>
-         <span>Ви не увійшли до системи</span>
+      <div id="navs_inline_right">
+         <span>Ви не увійшли до системи</span> 
          <nav>
             <ul class="menu">
                <li class="inline_li"><a href="#">Обговорення</a></li>
@@ -22,14 +22,14 @@
             </ul>
          </nav>
       </div>
-      <div>
-         <nav class="inline_nav" id="nav_1">
+      <div id="navs_inline">
+         <nav id="nav_1">
             <ul class="menu">
                <li class="inline_li"><a href="#">Стаття</a></li>
                <li class="inline_li"><a href="#">Обговорення</a></li>
             </ul>
          </nav>
-         <nav class="inline_nav">
+         <nav>
             <ul class="menu">
                <li class="inline_li"><a href="#">Читати</a></li>
                <li class="inline_li"><a href="#">Редагувати код</a></li>
@@ -52,7 +52,7 @@
                   href="https://uk.wikipedia.org/wiki/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F_(%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%BD%D1%8F)">Лісова
                   пісня (значення)</a>.</i>
          </section>
-         <section>
+         <section id="inline_text_and_img">
             <article>
                <p>
                   <b>«Лісова пісня»</b> — віршована п'єса в трьох діях <a
