--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -12,7 +12,7 @@
 <body>
    <header>
       <div id="navs_inline_right">
-         <span>Ви не увійшли до системи</span> 
+         <span><i class="icons" id="user_icon"></i> Ви не увійшли до системи</span> 
          <nav>
             <ul class="menu">
                <li class="inline_li"><a href="#">Обговорення</a></li>
@@ -25,16 +25,17 @@
       <div id="navs_inline">
          <nav id="nav_1">
             <ul class="menu">
-               <li class="inline_li"><a href="#">Стаття</a></li>
-               <li class="inline_li"><a href="#">Обговорення</a></li>
+               <li class="inline_li tabs active"><a href="#">Стаття</a></li>
+               <li class="inline_li tabs"><a href="#">Обговорення</a></li>
             </ul>
          </nav>
          <nav>
             <ul class="menu">
-               <li class="inline_li"><a href="#">Читати</a></li>
-               <li class="inline_li"><a href="#">Редагувати код</a></li>
-               <li class="inline_li"><a href="#">Додати тему</a></li>
-               <li class="inline_li"><a href="#">Переглянути історію</a></li>
+               <li class="inline_li tabs"><a href="#">Читати</a></li>
+               <li class="inline_li tabs active"><a href="#">Неперевірені зміни</a></li>
+               <li class="inline_li tabs"><a href="#">Редагувати код</a></li>
+               <li class="inline_li tabs"><a href="#">Додати тему</a></li>
+               <li class="inline_li tabs"><a href="#">Переглянути історію</a></li>
             </ul>
          </nav>
       </div>
