--- a/ukranian/index.html
+++ b/ukranian/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="navs_inline_right">
-            <span>Ви не увійшли до системи</span>
+            <span><i class="icons" id="user_icon"></i>Ви не увійшли до системи</span>
             <nav>
                 <ul class="menu">
                     <li class="inline_li"><a href="#">Обговорення</a></li>
@@ -23,16 +23,16 @@
         <div id="navs_inline">
             <nav id="nav_1">
                 <ul class="menu">
-                    <li class="inline_li"><a href="#">Стаття</a></li>
-                    <li class="inline_li"><a href="#">Обговорення</a></li>
+                    <li class="inline_li tabs active"><a href="#">Стаття</a></li>
+                    <li class="inline_li tabs"><a href="#">Обговорення</a></li>
                 </ul>
             </nav>
             <nav>
                 <ul class="menu">
-                    <li class="inline_li"><a href="#">Читати</a></li>
-                    <li class="inline_li"><a href="#">Редагувати код</a></li>
-                    <li class="inline_li"><a href="#">Додати тему</a></li>
-                    <li class="inline_li"><a href="#">Переглянути історію</a></li>
+                    <li class="inline_li tabs active"><a href="#">Читати</a></li>
+                    <li class="inline_li tabs"><a href="#">Редагувати код</a></li>
+                    <li class="inline_li tabs"><a href="#">Додати тему</a></li>
+                    <li class="inline_li tabs"><a href="#">Переглянути історію</a></li>
                 </ul>
             </nav>
         </div>
@@ -355,44 +355,52 @@
                 <i>Докладніше: Територія України та Крайні точки України</i>
             </section>
             <section id="inline_text_and_img">
-                <p>
-                    Україна розташована в південно-східній частині Європи[6]. Вона має спільні сухопутні державні
-                    кордони з
-                    Білоруссю на півночі, з Польщею на заході, зі Словаччиною, Угорщиною, Румунією і Молдовою на
-                    південному
-                    заході й
-                    із Росією на сході. Південь України омивається Чорним та Азовським морями. Морські кордони вона має
-                    з
-                    Румунією і
-                    Росією.
+                <div>
+                    <p>
+                        Україна розташована в південно-східній частині Європи[6]. Вона має спільні сухопутні державні
+                        кордони з
+                        Білоруссю на півночі, з Польщею на заході, зі Словаччиною, Угорщиною, Румунією і Молдовою на
+                        південному
+                        заході й
+                        із Росією на сході. Південь України омивається Чорним та Азовським морями. Морські кордони вона
+                        має
+                        з
+                        Румунією і
+                        Росією.
 
-                    Загальна площа України становить 603 700 км², вона становить 5,7 % території Європи й 0,44 %
-                    території
-                    світу. За
-                    цим показником вона є другою за величиною серед країн Європи після Росії (або найбільшою країною,
-                    яка
-                    повністю
-                    лежить у Європі). Площа виключної морської економічної зони України становить 72 658 км². Код країни
-                    за
-                    системою
-                    ISO 3166-1-alpha-2 — UA[41]. Територія України витягнута із заходу на схід на 1316 км і з півночі на
-                    південь
-                    на
-                    893 км, лежить приблизно між 52° 20′ та 44° 23′ північної широти й 22° 5′ і 41° 15′ східної довготи.
-                    Крайній північний пункт — село Грем'яч (урочище Петрівське) Чернігівської області.
-
-                <ul>
-                    <li>Крайній південний пункт — смт Форос Автономної Республіки Крим.</li>
-                    <li>Крайній західний пункт — село Соломоново Закарпатської області.</li>
-                    <li>Крайній східний пункт — село Рання Зоря Луганської області.</li>
-                    <li>Географічний центр України розташований на північній околиці села Мар'янівка Звенигородського
-                        району
-                        Черкаської області[42].</li>
-                    <li>Згідно з однією з методик вимірювання[43], географічний центр Європи розташований на території
-                        України,
-                        неподалік міста Рахів Закарпатської області.</li>
-                </ul>
-                </p>
+                        Загальна площа України становить 603 700 км², вона становить 5,7 % території Європи й 0,44 %
+                        території
+                        світу. За
+                        цим показником вона є другою за величиною серед країн Європи після Росії (або найбільшою
+                        країною,
+                        яка
+                        повністю
+                        лежить у Європі). Площа виключної морської економічної зони України становить 72 658 км². Код
+                        країни
+                        за
+                        системою
+                        ISO 3166-1-alpha-2 — UA[41]. Територія України витягнута із заходу на схід на 1316 км і з
+                        півночі на
+                        південь
+                        на
+                        893 км, лежить приблизно між 52° 20′ та 44° 23′ північної широти й 22° 5′ і 41° 15′ східної
+                        довготи.
+                        Крайній північний пункт — село Грем'яч (урочище Петрівське) Чернігівської області.
+                    </p>
+                    <ul>
+                        <li>Крайній південний пункт — смт Форос Автономної Республіки Крим.</li>
+                        <li>Крайній західний пункт — село Соломоново Закарпатської області.</li>
+                        <li>Крайній східний пункт — село Рання Зоря Луганської області.</li>
+                        <li>Географічний центр України розташований на північній околиці села Мар'янівка
+                            Звенигородського
+                            району
+                            Черкаської області[42].</li>
+                        <li>Згідно з однією з методик вимірювання[43], географічний центр Європи розташований на
+                            території
+                            України,
+                            неподалік міста Рахів Закарпатської області.</li>
+                    </ul>
+                </div>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Vkraina-Cosaques-Okraina_small.png/250px-Vkraina-Cosaques-Okraina_small.png"
                     alt="Італійська карта Вінченцо Марія Коронеллі 1690 року, де обидва береги Наддніпрянщини з Києвом позначені як «VKRAINE ou PAYS DES COSAQVES» («Україна або Країна козаків»); слово «OKRAINA» («Окраїна») вжито стосовно Задоння й Рязані">
 
